# gfc-logger-system

./: .gitignore  CMakeLists.txt  Makefile  README.md
gfc-logger-system/: logger.cc  logger.hh
tests/: test_logger.cc
